Feat: template to show bank account transactions (not implemented yet)

--- a/src/app/components/core/bankAccounts/bank-accounts-overview/bank-accounts-overview.component.html
+++ b/src/app/components/core/bankAccounts/bank-accounts-overview/bank-accounts-overview.component.html
@@ -14,7 +14,7 @@
 
     <!-- Transactions Overview -->
     <div class="pt-16">
-      <app-bank-account-transactions-overview></app-bank-account-transactions-overview>
+      <app-bank-account-transactions-overview [bankAccount]="activeBankAccount"></app-bank-account-transactions-overview>
     </div>
   </div>
 }
