--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -1,30 +1,33 @@
-<div class="flex flex-col mx-auto size-full">
-  <!-- ========== PERIOD PROGRESS BAR ========== -->
-  <div class="text-start">
-    <app-period-bar></app-period-bar>
+<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+  <div class="flex flex-col mx-auto size-full">
+    <!-- ========== PERIOD PROGRESS BAR ========== -->
+    <div class="text-start">
+      <app-period-bar></app-period-bar>
+    </div>
+    <!-- ========== PERIOD PROGRESS BAR ========== -->
   </div>
-  <!-- ========== PERIOD PROGRESS BAR ========== -->
+
+  @if(areFoldersAvailable()) {
+    <div class="flex flex-col mx-auto size-full mt-8">
+      <!-- ========== PERIOD PROGRESS BAR ========== -->
+      <app-folders-overview></app-folders-overview>
+      <!-- ========== PERIOD PROGRESS BAR ========== -->
+    </div>
+  } @else {
+    <div class="max-w-[50rem] flex flex-col mx-auto size-full">
+      <!-- ========== MAIN CONTENT ========== -->
+      <main id="content">
+        <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
+          <h1 class="block text-2xl font-bold text-black sm:text-4xl">Get Started</h1>
+          <p class="mt-3 text-lg text-gray-600">It looks like you haven’t added any folders yet. Folders help you organize your budget into categories like groceries, transportation, and more. Create your first folder to start managing your finances more effectively.</p>
+          <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
+            <app-create-folder></app-create-folder>
+          </div>
+        </div>
+      </main>
+      <!-- ========== END MAIN CONTENT ========== -->
+    </div>
+  }
 </div>
 
-@if(areFoldersAvailable()) {
-  <div class="flex flex-col mx-auto size-full mt-8">
-    <!-- ========== PERIOD PROGRESS BAR ========== -->
-    <app-folders-overview></app-folders-overview>
-    <!-- ========== PERIOD PROGRESS BAR ========== -->
-  </div>
-} @else {
-  <div class="max-w-[50rem] flex flex-col mx-auto size-full">
-    <!-- ========== MAIN CONTENT ========== -->
-    <main id="content">
-      <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
-        <h1 class="block text-2xl font-bold text-black sm:text-4xl">Get Started</h1>
-        <p class="mt-3 text-lg text-gray-600">It looks like you haven’t added any folders yet. Folders help you organize your budget into categories like groceries, transportation, and more. Create your first folder to start managing your finances more effectively.</p>
-        <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
-          <app-create-folder></app-create-folder>
-        </div>
-      </div>
-    </main>
-    <!-- ========== END MAIN CONTENT ========== -->
-  </div>
-}
 <app-create-expired-period></app-create-expired-period>
