--- a/src/app/components/core/bankAccounts/bank-account-card/bank-account-card.component.html
+++ b/src/app/components/core/bankAccounts/bank-account-card/bank-account-card.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="ps-5 pe-5 pb-5 flex justify-between gap-x-3">
+  <div class="ps-5 pe-5 pb-2 flex justify-between gap-x-3">
     <p class="text-sm text-gray-500">
       <span class="font-semibold text-gray-800">{{bankAccount?.bankName}}</span>
     </p>
@@ -30,6 +30,17 @@
         {{bankAccount?.currency}}
       </span>
     </span>
+  </div>
+  <!--  actions-->
+  <div class="ps-3 pb-3 flex items-center">
+    <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 cursor-pointer" (click)="delete(bankAccount)">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+           fill="none" stroke="currentColor" stroke-width="2"
+           stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-4">
+        <path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/>
+      </svg>
+    </a>
+    <app-update-bank-account [bankAccount]="bankAccount"></app-update-bank-account>
   </div>
 
   <a class="py-3 px-4 md:px-5 inline-flex justify-between items-center text-sm text-gray-600 border-t border-gray-200 hover:bg-gray-50 focus:outline-none
