--- a/src/app/components/core/bankAccounts/create-bank-account/create-bank-account.component.html
+++ b/src/app/components/core/bankAccounts/create-bank-account/create-bank-account.component.html
@@ -106,7 +106,7 @@
                            value=""
                            [formControl]="currentBalance"
                            (input)="onInputTargetChange($event)"
-                           (blur)="formatValue()"
+                           (blur)="formatValueOnBlur()"
                            class="border-1 py-2 px-3 pe-11 block w-full
                          border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500
                          focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
