--- a/src/app/components/core/bankAccounts/update-bank-account/update-bank-account.component.html
+++ b/src/app/components/core/bankAccounts/update-bank-account/update-bank-account.component.html
@@ -1,15 +1,15 @@
 @if(bankAccount){
   <!-- Button -->
   <button #button class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 hover:bg-gray-100 focus:ring-2 focus:bg-white cursor-pointer"
-          data-hs-overlay="#hs-update-bank-account"
-          aria-controls="hs-update-bank-account">
+          [attr.data-hs-overlay]="'#hs-update-bank-account-'+bankAccount.id"
+          [attr.aria-controls]="'hs-update-bank-account-'+bankAccount.id">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
          stroke="black" stroke-width="2"
          stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-4"><path d="M12 20h9"/>
       <path d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"/><path d="m15 5 3 3"/></svg>
   </button>
   <!-- Button -->
-  <div id="hs-update-bank-account" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
+  <div [id]="'hs-update-bank-account-'+bankAccount.id" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
        role="dialog" tabindex="-1" aria-labelledby="hs-bg-gray-on-hover-cards-label">
     <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-4xl sm:w-full m-3 h-[calc(100%-3.5rem)] sm:mx-auto">
       <div class="max-h-full overflow-hidden flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto">
@@ -19,7 +19,7 @@
           </h3>
           <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2
         rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50
-        disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#hs-update-bank-account">
+        disabled:pointer-events-none" aria-label="Close" [attr.data-hs-overlay]="'#hs-update-bank-account-'+bankAccount.id">
             <span class="sr-only">Close</span>
             <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
           </button>
@@ -84,7 +84,7 @@
                              value=""
                              [formControl]="currentBalance"
                              (input)="onInputTargetChange($event)"
-                             (blur)="formatValue()"
+                             (blur)="formatValueOnBlur()"
                              class="border-1 py-2 px-3 pe-11 block w-full
                          border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500
                          focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
