Feat: part 1 review and fix of transactions with different currency than categories

--- a/src/app/components/core/transactions/bank-account-transactions-overview/bank-account-transactions-overview.component.html
+++ b/src/app/components/core/transactions/bank-account-transactions-overview/bank-account-transactions-overview.component.html
@@ -157,11 +157,13 @@
                     </span>
                       </button>
                     </td>
-                    @if(!transaction.requireCategoryReview){
-                      <td class="size-px whitespace-nowrap">
-                        <app-transaction-details [transaction]="transaction" [bankAccount]="bankAccount"></app-transaction-details>
-                      </td>
-                    }
+                    <td class="size-px whitespace-nowrap">
+                      @if(!transaction.requireCategoryReview){
+                          <app-transaction-details [transaction]="transaction" [bankAccount]="bankAccount"></app-transaction-details>
+                      } @else {
+                        <app-review-category-transaction [transaction]="transaction" [bankAccount]="bankAccount"></app-review-category-transaction>
+                      }
+                    </td>
                   </tr>
                 }
               }
