--- a/src/app/components/core/transactions/review-category-transaction/review-category-transaction.component.html
+++ b/src/app/components/core/transactions/review-category-transaction/review-category-transaction.component.html
@@ -1,5 +1,6 @@
 <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false"
-        [attr.aria-controls]="'hs-review-tr-modal-'+transaction?.id" [attr.data-hs-overlay]="'#hs-review-tr-modal-'+transaction?.id">
+        [attr.aria-controls]="'hs-review-tr-modal-'+transaction?.id" [attr.data-hs-overlay]="'#hs-review-tr-modal-'+transaction?.id"
+        (click)="getRecommendedExchangeRate()">
   <span class="px-6 py-1.5">
     <span class="py-1 px-2 inline-flex justify-center items-center gap-2 rounded-lg border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -41,10 +42,7 @@
       <div class="relative z-10 -mt-12">
         <!-- Icon -->
         <span class="mx-auto flex justify-center items-center size-[62px] rounded-full border border-gray-200 bg-white text-gray-700 shadow-sm">
-          <svg class="size-6" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path d="M1.92.506a.5.5 0 0 1 .434.14L3 1.293l.646-.647a.5.5 0 0 1 .708 0L5 1.293l.646-.647a.5.5 0 0 1 .708 0L7 1.293l.646-.647a.5.5 0 0 1 .708 0L9 1.293l.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .801.13l.5 1A.5.5 0 0 1 15 2v12a.5.5 0 0 1-.053.224l-.5 1a.5.5 0 0 1-.8.13L13 14.707l-.646.647a.5.5 0 0 1-.708 0L11 14.707l-.646.647a.5.5 0 0 1-.708 0L9 14.707l-.646.647a.5.5 0 0 1-.708 0L7 14.707l-.646.647a.5.5 0 0 1-.708 0L5 14.707l-.646.647a.5.5 0 0 1-.708 0L3 14.707l-.646.647a.5.5 0 0 1-.801-.13l-.5-1A.5.5 0 0 1 1 14V2a.5.5 0 0 1 .053-.224l.5-1a.5.5 0 0 1 .367-.27zm.217 1.338L2 2.118v11.764l.137.274.51-.51a.5.5 0 0 1 .707 0l.646.647.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.509.509.137-.274V2.118l-.137-.274-.51.51a.5.5 0 0 1-.707 0L12 1.707l-.646.647a.5.5 0 0 1-.708 0L10 1.707l-.646.647a.5.5 0 0 1-.708 0L8 1.707l-.646.647a.5.5 0 0 1-.708 0L6 1.707l-.646.647a.5.5 0 0 1-.708 0L4 1.707l-.646.647a.5.5 0 0 1-.708 0l-.509-.51z"/>
-            <path d="M3 4.5a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5zm8-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z"/>
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="size-6"><path d="m15 12-8.373 8.373a1 1 0 1 1-3-3L12 9"/><path d="m18 15 4-4"/><path d="m21.5 11.5-1.914-1.914A2 2 0 0 1 19 8.172V7l-2.26-2.26a6 6 0 0 0-4.202-1.756L9 2.96l.92.82A6.18 6.18 0 0 1 12 8.4V10l2 2h1.172a2 2 0 0 1 1.414.586L18.5 14.5"/></svg>
         </span>
         <!-- End Icon -->
       </div>
@@ -53,66 +51,57 @@
       <div class="p-4 sm:p-7 overflow-y-auto">
         <div class="text-center">
           <h3 id="hs-ai-invoice-modal-label" class="text-lg font-semibold text-gray-800">
-            Transaction from {{bankAccount?.name}}
+            Category review
           </h3>
           <p class="text-sm text-gray-500">
-            {{transaction?.note}}
+            Your account currency <span class="font-bold">{{bankAccount?.currency}}</span> is different from <br> the category your transaction is assigned to
+             <span class="font-bold">{{getCategoryCurrency()}}</span>
           </p>
-        </div>
 
-        <!-- Grid -->
-        <div class="mt-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5">
-          <div>
-            <span class="block text-xs uppercase text-gray-500">Amount paid:</span>
-            <span class="block text-sm font-medium text-gray-800">{{transaction?.amount | customCurrencyPipe}} {{bankAccount?.currency}}</span>
-          </div>
-          <!-- End Col -->
+          <div class="grid space-y-3 text-start mt-8">
+            <div class="relative flex items-start">
+              <div class="flex items-center h-5 mt-1">
+                <input id="hs-radio-delete" name="hs-radio-with-description" type="radio" class="border-gray-200 rounded-full text-blue-600
+                focus:ring-blue-500" aria-describedby="hs-radio-delete-description" checked="" (change)="setAutomaticExchangeRateValue()">
+              </div>
+              <label for="hs-radio-delete" class="ms-3">
+                <span class="block text-sm font-semibold text-gray-800">Use System Exchange Rate</span>
+                <span id="hs-radio-delete-description" class="block text-sm text-gray-600">Apply the recommended rate automatically.</span>
+              </label>
+            </div>
 
-          <div>
-            <span class="block text-xs uppercase text-gray-500">Date paid:</span>
-            <span class="block text-sm font-medium text-gray-800">{{transaction?.createdOn | date}}</span>
-          </div>
-          <!-- End Col -->
+            <div class="relative flex items-start">
+              <div class="flex items-center h-5 mt-1">
+                <input id="hs-radio-archive" name="hs-radio-with-description" type="radio"
+                       class="border-gray-200 rounded-full text-blue-600 focus:ring-blue-500" aria-describedby="hs-radio-archive-description"
+                       (change)="setManualExchangeRateValue()">
+              </div>
+              <label for="hs-radio-archive" class="ms-3">
+                <span class="block text-sm font-semibold text-gray-800">Enter Custom Exchange Rate</span>
+                <span id="hs-radio-archive-description" class="block text-sm text-gray-600">Manually specify a different rate.</span>
+              </label>
+            </div>
 
-          <div>
-            <span class="block text-xs uppercase text-gray-500">Payment method:</span>
-            <div class="flex items-center gap-x-2">
-              <span class="block text-sm font-medium text-gray-800">•••• {{bankAccount?.accountNumber}}</span>
+            <div class="w-full pt-6">
+              <label for="input-label-with-helper-text" class="block text-sm font-medium mb-2">Exchange Rate</label>
+              <input #exchangeRateInputE type="number" id="input-label-with-helper-text" class="border-1 w-full py-3 px-4 block border-gray-200 rounded-lg text-sm
+              focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                     aria-describedby="hs-input-helper-text" [formControl]="exchangeRateInput">
+              <p class="mt-2 text-sm text-gray-500" id="hs-input-helper-text">Rate explanation: 1
+                <span class="font-bold">{{bankAccount?.currency}}</span> is {{exchangeRateInput.value}} <span class="font-bold">{{getCategoryCurrency()}}</span></p>
             </div>
           </div>
-          <!-- End Col -->
-        </div>
-        <!-- End Grid -->
-
-        <div class="mt-5 sm:mt-10">
-          <h4 class="text-xs font-semibold uppercase text-gray-800">Summary</h4>
-
-          <ul class="mt-3 flex flex-col">
-            <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
-              <div class="flex items-center justify-between w-full">
-                <span>Related category</span>
-<!--                <span>{{folderService.getCategoryNameById(transaction?.linkedCategoryId)}}</span>-->
-              </div>
-            </li>
-            <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
-              <div class="flex items-center justify-between w-full">
-                <span>Type of transaction</span>
-<!--                <span>{{enumService.getEnumToString(TransactionTypeEnum, transaction?.type)}}</span>-->
-              </div>
-            </li>
-          </ul>
         </div>
 
         <!-- Button -->
         <div class="mt-5 flex justify-end gap-x-2">
-          <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-error text-white shadow-sm
+          <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-success text-white shadow-sm
           disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 cursor-pointer" (click)="review()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-4"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/><line x1="10" x2="10" y1="11" y2="17"/><line x1="14" x2="14" y1="11" y2="17"/></svg>
-            Delete
+            Confirm
           </a>
-          <button class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-300
+          <button #closeButton class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-300
           text-white hover:bg-primary-400 focus:outline-none focus:bg-primary-400 disabled:opacity-50 disabled:pointer-events-none"
-                  [attr.data-hs-overlay]="'#hs-detail-tr-modal-'+transaction?.id">
+                  [attr.data-hs-overlay]="'#hs-review-tr-modal-'+transaction?.id">
             Close
           </button>
         </div>
