--- a/src/app/components/core/categories/category-details/category-details.component.html
+++ b/src/app/components/core/categories/category-details/category-details.component.html
@@ -122,12 +122,16 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
       <h4 class="text-xs font-semibold uppercase text-gray-800">Transactions</h4>
 
       <ul class="mt-3 flex flex-col">
-        <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
-          <div class="flex items-center justify-between w-full">
-            <span>Example payment</span>
-            <span>$264.00</span>
-          </div>
-        </li>
+        @if(categoryTransactions.length > 0){
+          @for(transaction of categoryTransactions; track transaction){
+            <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
+              <div class="flex items-center justify-between w-full">
+                <span>{{transaction?.note | slice:0:20}}</span>
+                <span>{{transaction.amount | customCurrencyPipe}} {{getBankAccountCurrency(transaction)}}</span>
+              </div>
+            </li>
+          }
+        }
       </ul>
     </div>
 
