--- a/src/app/components/core/transactions/transaction-details/transaction-details.component.html
+++ b/src/app/components/core/transactions/transaction-details/transaction-details.component.html
@@ -98,16 +98,23 @@
                 <span>{{enumService.getEnumToString(TransactionTypeEnum, transaction?.type)}}</span>
               </div>
             </li>
+            <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
+              <div class="flex items-center justify-between w-full">
+                <span>Transaction id</span>
+                <span>{{transaction?.id}}</span>
+              </div>
+            </li>
           </ul>
         </div>
 
         <!-- Button -->
         <div class="mt-5 flex justify-end gap-x-2">
-          <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-error text-white shadow-sm
-          disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 cursor-pointer" (click)="delete()">
+          <button #deleteButton class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-error text-white shadow-sm
+          disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 cursor-pointer"
+                  aria-controls="hs-danger-alert-delete-transaction" data-hs-overlay="#hs-danger-alert-delete-transaction">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-4"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/><line x1="10" x2="10" y1="11" y2="17"/><line x1="14" x2="14" y1="11" y2="17"/></svg>
             Delete
-          </a>
+          </button>
           <button class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-300
           text-white hover:bg-primary-400 focus:outline-none focus:bg-primary-400 disabled:opacity-50 disabled:pointer-events-none"
                   [attr.data-hs-overlay]="'#hs-detail-tr-modal-'+transaction?.id">
@@ -121,3 +128,52 @@
   </div>
 </div>
 <!-- End Modal -->
+
+
+<!--confirmation deletion dialog-->
+<div id="hs-danger-alert-delete-transaction" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="hs-danger-alert-label">
+  <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all md:max-w-2xl md:w-full m-3 md:mx-auto">
+    <div class="relative flex flex-col bg-white border shadow-sm rounded-xl overflow-hidden">
+      <div class="absolute top-2 end-2">
+        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800
+        hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#hs-danger-alert-delete-transaction">
+          <span class="sr-only">Close</span>
+          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+        </button>
+      </div>
+
+      <div class="p-4 sm:p-10 overflow-y-auto">
+        <div class="flex gap-x-4 md:gap-x-7">
+          <!-- Icon -->
+          <span class="shrink-0 inline-flex justify-center items-center size-[46px] sm:w-[62px] sm:h-[62px] rounded-full border-4 border-red-50 bg-red-100 text-red-500">
+            <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+              <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+          </span>
+          <!-- End Icon -->
+
+          <div class="grow">
+            <h3 id="hs-danger-alert-label" class="mb-2 text-xl font-bold text-gray-800">
+              Delete Transaction
+            </h3>
+            <p class="text-gray-500 break-words whitespace-normal">
+              Permanently remove this transaction from your account and associated categories. Once deleted, this action cannot be undone. The account balance and related category totals will be updated to reflect the change.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex justify-end items-center gap-x-2 py-3 px-4 bg-gray-50 border-t">
+        <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200
+        bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50"
+                data-hs-overlay="#hs-danger-alert-delete-transaction">
+          Cancel
+        </button>
+        <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent
+         bg-red-500 text-white hover:bg-red-600 disabled:opacity-50 disabled:pointer-events-none cursor-pointer" (click)="delete()">
+          Delete Transaction
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
