--- a/src/app/components/core/transactions/transaction-details/transaction-details.component.html
+++ b/src/app/components/core/transactions/transaction-details/transaction-details.component.html
@@ -53,7 +53,7 @@
           <h3 id="hs-ai-invoice-modal-label" class="text-lg font-semibold text-gray-800">
             Transaction from {{bankAccount?.name}}
           </h3>
-          <p class="text-sm text-gray-500">
+          <p class="text-sm text-gray-500 break-words whitespace-normal">
             {{transaction?.note}}
           </p>
         </div>
