Feat: transaction insights added

--- a/src/app/components/core/transactions/bank-account-transactions-overview/bank-account-transactions-overview.component.html
+++ b/src/app/components/core/transactions/bank-account-transactions-overview/bank-account-transactions-overview.component.html
@@ -31,15 +31,26 @@
               Insights
             </button>
             <div id="hs-as-table-label" class="hs-collapse hidden w-full overflow-hidden transition-[height] duration-300" aria-labelledby="hs-as-table">
-              <div class="pb-4 px-6">
-                <div class="flex items-center space-x-2">
-                  <span class="size-5 flex justify-center items-center rounded-full bg-blue-600 text-white">
-                    <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
+              <div class="pb-4 px-6 flex flex-col gap-4">
+                @for(insight of bankAccount?.insights; track insight){
+                  <div class="flex items-center space-x-2">
+                    @switch (insight.type){
+                      @case (TransactionInsightTypeEnum.Success){
+                        <span class="size-5 flex justify-center items-center rounded-full bg-primary-400 text-white">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-3.5"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
+                        </span>
+                      }
+                      @case (TransactionInsightTypeEnum.Warning){
+                        <span class="size-5 flex justify-center items-center rounded-full bg-warning text-white">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-3.5"><circle cx="12" cy="12" r="10"/><line x1="12" x2="12" y1="8" y2="12"/><line x1="12" x2="12.01" y1="16" y2="16"/></svg>
+                        </span>
+                      }
+                    }
+                    <span class="text-sm text-gray-800">
+                      {{insight.message}}
                   </span>
-                  <span class="text-sm text-gray-800">
-                    There are no insights for this period.
-                  </span>
-                </div>
+                  </div>
+                }
               </div>
             </div>
           </div>
