--- a/src/app/components/core/bankAccounts/bank-accounts-overview/bank-accounts-overview.component.html
+++ b/src/app/components/core/bankAccounts/bank-accounts-overview/bank-accounts-overview.component.html
@@ -1,5 +1,15 @@
 @if(!areBankAccountsAvailable()){
-  no hay sexy boy
+  <div class="max-w-[50rem] flex flex-col mx-auto size-full">
+    <!-- ========== MAIN CONTENT ========== -->
+    <main id="content">
+      <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
+        <h1 class="block text-3xl font-bold text-gray-800">No Bank Accounts Found</h1>
+        <p class="mt-3 text-gray-600">It looks like you haven’t created any bank accounts yet. Bank accounts help you track your spending and keep your budget organized.</p>
+        <app-create-bank-account [isButton]="true"></app-create-bank-account>
+      </div>
+    </main>
+    <!-- ========== END MAIN CONTENT ========== -->
+  </div>
 } @else {
   <!-- Card Section -->
   <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
