--- a/src/app/components/core/bankAccounts/create-bank-account/create-bank-account.component.html
+++ b/src/app/components/core/bankAccounts/create-bank-account/create-bank-account.component.html
@@ -1,9 +1,15 @@
 <!-- Card -->
-<div class="bg-white border shadow-sm rounded-xl create-height">
-  <button #button class="h-full w-full flex items-center justify-center" aria-controls="hs-create-bank-account" data-hs-overlay="#hs-create-bank-account">
+@if(isButton){
+  <button #button class="mt-6 h-full w-full flex items-center justify-center" aria-controls="hs-create-bank-account" data-hs-overlay="#hs-create-bank-account">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
   </button>
-</div>
+} @else {
+  <div class="bg-white border shadow-sm rounded-xl create-height">
+    <button #button class="h-full w-full flex items-center justify-center" aria-controls="hs-create-bank-account" data-hs-overlay="#hs-create-bank-account">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+    </button>
+  </div>
+}
 <!-- End Card -->
 
 <div id="hs-create-bank-account" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-bg-gray-on-hover-cards-label">
