--- a/src/app/components/core/folders/create-folder/create-folder.component.html
+++ b/src/app/components/core/folders/create-folder/create-folder.component.html
@@ -24,7 +24,7 @@
         <div class="sm:divide-y divide-gray-200">
 
 
-          <form>
+          <form (ngSubmit)="onSubmit($event)">
             <div class="pt-0 p-4 sm:pt-0 sm:p-7 text-start">
               <!-- Grid -->
               <div class="space-y-4 sm:space-y-6">
@@ -37,7 +37,8 @@
 
                   <input id="input-folder-name" type="text" class="py-2 px-3 pe-11 block w-full border-1
                   border-gray-200 shadow-sm rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50
-                  disabled:pointer-events-none" placeholder="Enter your folder's name" [formControl]="folderName">
+                  disabled:pointer-events-none" placeholder="Enter your folder's name" [formControl]="folderName"
+                  (keydown.enter)="createFolder()">
                   @if(folderName.invalid && (!folderName.untouched)) {
                     <p class="text-sm text-red-600 mt-2" id="hs-validation-name">Please add the name of your folder</p>
                   }
